tests/samples/compile_errors/statement_placement/executable_at_module_level.bas
Attribute VB_Name = "M"
Option Explicit

Debug.Print "this is illegal at module top"

Sub S()
End Sub
